--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <title>Donate Bangladesh</title>
 </head>
 
-<body>
+<body class="bg-[#F9F7F3]">
 
     <main>
-        <nav class="bg-[#F9F7F3] flex items-center justify-center px-28 py-6">
+        <nav class="flex items-center justify-center py-6 px-28">
             <div class="navbar">
                 <div class="navbar-start">
                     <button class="btn bg-[#B4F461] text-xl font-semibold text-black font-lexend">Blog</button>
@@ -35,37 +35,111 @@
             </div>
         </nav>
 
-        <section class="flex flex-col items-center justify-center gap-8 py-20 px-36">
+        <section class="flex flex-col items-center justify-center gap-8 py-20 bg-white px-36">
+
             <div class="space-x-2">
                 <button class="btn bg-[#B4F461] text-xl font-semibold text-black font-lexend">Donation</button>
                 <button class="btn bg-transparent text-xl font-semibold text-[#111111B2] font-lexend">History</button>
             </div>
 
-            <div class="grid grid-cols-2 gap-8 p-8 border rounded-2xl">
-                <div>
-                    <img src="assets/noakhali.png" alt="Noakhali">
-                </div>
-                <div class="flex flex-col gap-3">
-                    <div class="flex items-center gap-4 px-3 py-4 bg-[#1111110D] rounded-lg w-[25%]">
-                        <img src="assets/coin.png" alt="coin">
-                        <p class="text-[#111111B2] font-lexend text-base font-normal">0 BDT</p>
+            <!-- Input section -->
+            <div class="space-y-8">
+                <div class="grid grid-cols-2 gap-8 p-8 border rounded-2xl">
+                    <div>
+                        <img src="assets/noakhali.png" alt="Noakhali">
                     </div>
-                    <h1 class="text-xl font-bold text-black font-lexend">Donate for Flood at Noakhali, Bangladesh</h1>
-                    <p class="font-light font-lexend text-[#111111B2]"> The recent floods in Noakhali have caused
-                        significant damage to
-                        homes
-                        infrastructure. Your
-                        donation will help provide essential supplies and to those affected by this disaster. Every
-                        contribution, big or small, makes difference. Please join us in supporting the relief efforts
-                        and making a positive impact on the lives of those in need.</p>
-                    <input type="text" placeholder="Write Donation Amount"
-                        class="p-4 border rounded-lg focus:outline-none placeholder:font-lexend">
-                    <button class="btn bg-[#B4F461] text-xl font-semibold text-black font-lexend w-full">Donate
-                        Now</button>
+                    <div class="flex flex-col gap-3">
+                        <div class="flex items-center gap-2 px-3 py-4 bg-[#1111110D] rounded-lg w-1/4">
+                            <img src="assets/coin.png" alt="coin">
+                            <p class="text-[#111111B2] font-lexend text-base font-normal">0 BDT</p>
+                        </div>
+                        <h1 class="text-xl font-bold text-black font-lexend">Donate for Flood at Noakhali, Bangladesh
+                        </h1>
+                        <p class="font-light font-lexend text-[#111111B2]"> The recent floods in Noakhali have caused
+                            significant damage to
+                            homes
+                            infrastructure. Your
+                            donation will help provide essential supplies and to those affected by this disaster. Every
+                            contribution, big or small, makes difference. Please join us in supporting the relief
+                            efforts
+                            and making a positive impact on the lives of those in need.</p>
+                        <input type="text" placeholder="Write Donation Amount"
+                            class="p-4 border rounded-lg focus:outline-none placeholder:font-lexend">
+                        <button class="btn bg-[#B4F461] text-xl font-semibold text-black font-lexend w-full">Donate
+                            Now</button>
+                    </div>
+                </div>
+
+                <div class="grid grid-cols-2 gap-8 p-8 border rounded-2xl">
+                    <div>
+                        <img src="assets/feni.png" alt="Feni">
+                    </div>
+                    <div class="flex flex-col gap-3">
+                        <div class="flex items-center gap-2 px-3 py-4 bg-[#1111110D] rounded-lg w-1/4">
+                            <img src="assets/coin.png" alt="coin">
+                            <p class="text-[#111111B2] font-lexend text-base font-normal">600 BDT</p>
+                        </div>
+                        <h1 class="text-xl font-bold text-black font-lexend">Donate for Flood Relief in Feni,Bangladesh
+                        </h1>
+                        <p class="font-light font-lexend text-[#111111B2]"> The recent floods in Feni have devastated
+                            local
+                            communities, leading to severe disruption and loss. Your generous donation will help provide
+                            immediate aid, including food, clean water, and medical supplies, to those affected by this
+                            calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of
+                            this
+                            disaster. Every contribution counts towards making a real difference. Please consider
+                            donating
+                            today to assist those in urgent need.</p>
+                        <input type="text" placeholder="Write Donation Amount"
+                            class="p-4 border rounded-lg focus:outline-none placeholder:font-lexend">
+                        <button class="btn bg-[#B4F461] text-xl font-semibold text-black font-lexend w-full">Donate
+                            Now</button>
+                    </div>
+                </div>
+
+                <div class="grid grid-cols-2 gap-8 p-8 border rounded-2xl">
+                    <div>
+                        <img src="assets/quota-protest.png" alt="Quota-protest">
+                    </div>
+                    <div class="flex flex-col gap-3">
+                        <div class="flex items-center gap-2 px-2 py-4 bg-[#1111110D] rounded-lg w-1/4">
+                            <img src="assets/coin.png" alt="coin">
+                            <p class="text-[#111111B2] font-lexend text-base font-normal">2400 BDT</p>
+                        </div>
+                        <h1 class="text-xl font-bold text-black font-lexend">Aid for Injured in the Quota Movement</h1>
+                        <p class="font-light font-lexend text-[#111111B2]">The recent Quota movement has resulted in
+                            numerous injuries and significant hardship for many individuals. Your support is crucial in
+                            providing medical assistance, rehabilitation, and necessary supplies to those affected. By
+                            contributing, you help ensure that injured individuals receive the care and support they
+                            need
+                            during this challenging time. Every donation plays a vital role in alleviating their
+                            suffering
+                            and aiding in their recovery. Please consider making a donation to support these brave
+                            individuals in their time of need.</p>
+                        <input type="text" placeholder="Write Donation Amount"
+                            class="p-4 border rounded-lg focus:outline-none placeholder:font-lexend">
+                        <button class="btn bg-[#B4F461] text-xl font-semibold text-black font-lexend w-full">Donate
+                            Now</button>
+                    </div>
                 </div>
             </div>
+
+            <!-- History Section -->
+            <div class="">
+                <div class="p-8">
+                    <h1 class="text-xl font-bold text-black font-lexend">History</h1>
+                    <p>Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)</p>
+                </div>
+
+            </div>
+
         </section>
     </main>
+
+    <footer class="p-12">
+
+    </footer>
+
 
 </body>
 
