Added blog page and some UI improvements

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <nav class="flex bg-[#F9F7F3] flex-col items-center justify-between py-6 px-4 backdrop-blur-sm">
             <div class="navbar">
                 <div class="navbar-start">
-                    <button class="btn bg-[#B4F461] text-xl font-semibold text-black font-lexend">Blog</button>
+                    <button class="btn bg-[#B4F461] text-xl font-semibold text-black font-lexend">
+                        <a href="blog.html">Blog</a></button>
                 </div>
                 <div class="flex items-center justify-center gap-4 navbar-center">
                     <img src="assets/logo.png" alt="">
