Added some minor changes

--- a/blog.html
+++ b/blog.html
@@ -32,49 +32,60 @@
     </nav>
     </header>
     <main>
-        <section class="flex flex-col items-center justify-center gap-8 px-10 py-20 bg-white lg:px-20">
 
-            <h1>Important FAQ</h1>
 
-            <!-- Accordion about question and answer -->
-            <div class="border collapse collapse-arrow">
-                <input type="radio" name="my-accordion-2" checked="checked" />
-                <div class="text-xl font-medium collapse-title">What is the Document Object Model (DOM)?</div>
-                <div class="collapse-content">
-                    <p>The Document Object Model (DOM) is a programming interface for web documents. It represents the
-                        structure of a web page as a tree of objects that developers can manipulate using JavaScript or
-                        other programming languages.</p>
+        <section class="px-10 py-20 space-y-6 bg-white lg:px-20">
+
+            <h1 class="text-3xl font-bold text-left text-black font-lexend">Important FAQ</h1>
+            <div class="flex flex-col items-center justify-center gap-8">
+                <!-- Accordion about question and answer -->
+                <div class="border collapse collapse-arrow">
+                    <input type="radio" name="my-accordion-2" checked="checked" />
+                    <div class="text-xl font-medium collapse-title">What is the Document Object Model (DOM)?</div>
+                    <div class="collapse-content">
+                        <p>The Document Object Model (DOM) is a programming interface for web documents. It represents
+                            the
+                            structure of a web page as a tree of objects that developers can manipulate using JavaScript
+                            or
+                            other programming languages.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="border collapse collapse-arrow">
-                <input type="radio" name="my-accordion-2" />
-                <div class="text-xl font-medium collapse-title">How do you select an element from the DOM?</div>
-                <div class="collapse-content">
-                    <p>There are several ways to select an element from the DOM. Using getElementById,
-                        getElementByClassName, getElementsByTagName and more</p>
+                <div class="border collapse collapse-arrow">
+                    <input type="radio" name="my-accordion-2" />
+                    <div class="text-xl font-medium collapse-title">How do you select an element from the DOM?</div>
+                    <div class="collapse-content">
+                        <p>There are several ways to select an element from the DOM. Using getElementById,
+                            getElementByClassName, getElementsByTagName and more</p>
+                    </div>
                 </div>
-            </div>
-            <div class="border collapse collapse-arrow">
-                <input type="radio" name="my-accordion-2" />
-                <div class="text-xl font-medium collapse-title">What is event delegation in the context of the DOM, and
-                    why is it useful?</div>
-                <div class="collapse-content">
-                    <p>Event delegation leverages event bubbling to efficiently manage events for multiple child
-                        elements by attaching a single event listener to their common ancestor. It is especially useful
-                        in cases where you have a large number of elements or dynamically added content, providing both
-                        performance benefits and easier maintenance.</p>
+                <div class="border collapse collapse-arrow">
+                    <input type="radio" name="my-accordion-2" />
+                    <div class="text-xl font-medium collapse-title">What is event delegation in the context of the DOM,
+                        and
+                        why is it useful?</div>
+                    <div class="collapse-content">
+                        <p>Event delegation leverages event bubbling to efficiently manage events for multiple child
+                            elements by attaching a single event listener to their common ancestor. It is especially
+                            useful
+                            in cases where you have a large number of elements or dynamically added content, providing
+                            both
+                            performance benefits and easier maintenance.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="border collapse collapse-arrow">
-                <input type="radio" name="my-accordion-2" />
-                <div class="text-xl font-medium collapse-title">How do you manipulate an element's attributes and styles
-                    using the DOM?</div>
-                <div class="collapse-content">
-                    <p>Attributes: Use getAttribute(), setAttribute(), and removeAttribute() to manage element
-                        attributes, or directly modify properties like element.src. <br>
-                        Classes: Use the classList property for adding, removing, toggling, or checking classes. <br>
-                        Styles: Use the style property to set inline styles, and getComputedStyle() to retrieve the
-                        rendered styles.</p>
+                <div class="border collapse collapse-arrow">
+                    <input type="radio" name="my-accordion-2" />
+                    <div class="text-xl font-medium collapse-title">How do you manipulate an element's attributes and
+                        styles
+                        using the DOM?</div>
+                    <div class="collapse-content">
+                        <p>Attributes: Use getAttribute(), setAttribute(), and removeAttribute() to manage element
+                            attributes, or directly modify properties like element.src. <br>
+                            Classes: Use the classList property for adding, removing, toggling, or checking classes.
+                            <br>
+                            Styles: Use the style property to set inline styles, and getComputedStyle() to retrieve the
+                            rendered styles.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
