--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
 
             <!-- History Section -->
-            <div id="history" class="w-full">
+            <div id="history" class="hidden w-full">
 
             </div>
 
