--- a/index.html
+++ b/index.html
@@ -148,9 +148,10 @@
             <!-- Modal section -->
             <!-- Open the modal using ID.showModal() method -->
             <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
-                <div class="text-center modal-box">
+                <div class="flex flex-col items-center justify-center space-y-4 modal-box">
                     <h3 class="text-lg font-bold">Congratulations!</h3>
-                    <p class="py-4">You Have Donated for Humankind</p>
+                    <img src="assets/coin.png" alt="">
+                    <p>You Have Donated for Humankind</p>
                     <h3 class="text-lg font-bold">Successfully</h3>
                     <div class="flex items-center justify-center modal-action">
                         <form method="dialog">
