Fixed transparency of the header section

--- a/blog.html
+++ b/blog.html
@@ -12,24 +12,24 @@
 </head>
 
 <body>
-    <header class="sticky top-0"></header>
-    <nav class="flex bg-[#F9F7F3] flex-col items-center justify-between py-6 px-4 backdrop-blur-sm">
-        <div class="navbar">
-            <div class="navbar-start">
-                <button class="btn bg-[#B4F461] text-xl font-semibold text-black font-lexend"><a
-                        href="index.html">Home</a></button>
+    <header class="sticky top-0 bg-transparent opacity-100 backdrop-blur-3xl">
+        <nav class="flex bg-[#F9F7F3]/50 flex-col items-center justify-between py-6 px-4">
+            <div class="navbar">
+                <div class="navbar-start">
+                    <button class="btn bg-[#B4F461] text-xl font-semibold text-black font-lexend">
+                        <a href="index.html">Home</a></button>
+                </div>
+                <div class="flex items-center justify-center gap-4 navbar-center">
+                    <img src="assets/logo.png" alt="">
+                    <p class="hidden text-lg font-semibold text-black font-lexend lg:block">Donate Bangladesh</p>
+                </div>
+                <div class="flex items-center gap-2 navbar-end">
+                    <img src="assets/coin.png" alt="coin">
+                    <p class="text-[#111111B2] font-lexend font-medium text-lg"><span id="total-donation">5500</span>BDT
+                    </p>
+                </div>
             </div>
-            <div class="flex items-center justify-center gap-4 navbar-center">
-                <img src="assets/logo.png" alt="">
-                <p class="hidden text-lg font-semibold text-black font-lexend lg:block">Donate Bangladesh</p>
-            </div>
-            <div class="flex items-center gap-2 navbar-end">
-                <img src="assets/coin.png" alt="coin">
-                <p class="text-[#111111B2] font-lexend font-medium text-lg"><span id="total-donation">5500</span>BDT
-                </p>
-            </div>
-        </div>
-    </nav>
+        </nav>
     </header>
     <main>
 
