--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-    <header class="sticky top-0">
-        <nav class="flex bg-[#F9F7F3] flex-col items-center justify-between py-6 px-4 backdrop-blur-sm">
+    <header class="sticky top-0 bg-transparent opacity-100 backdrop-blur-3xl">
+        <nav class="flex bg-[#F9F7F3]/50 flex-col items-center justify-between py-6 px-4">
             <div class="navbar">
                 <div class="navbar-start">
                     <button class="btn bg-[#B4F461] text-xl font-semibold text-black font-lexend">
@@ -36,7 +36,7 @@
             </div>
         </nav>
 
-        <div class="flex justify-center py-8 space-x-2 border-b backdrop-blur-3xl">
+        <div class="flex justify-center py-8 space-x-2 bg-white bg-opacity-50 border-b">
             <button id="display-donation"
                 class="btn bg-[#B4F461] text-xl font-semibold text-black font-lexend">Donation</button>
             <button id="display-history" class="btn text-xl font-semibold text-[#111111B2] font-lexend">History</button>
