z-index added in nav bar at the blog page

--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="sticky top-0 bg-transparent opacity-100 backdrop-blur-3xl">
+    <header class="sticky top-0 z-10 bg-transparent opacity-100 backdrop-blur-3xl">
         <nav class="flex bg-[#F9F7F3]/50 flex-col items-center justify-between py-6 px-4">
             <div class="navbar">
                 <div class="navbar-start">
@@ -20,7 +20,7 @@
                         <a href="index.html">Home</a></button>
                 </div>
                 <div class="flex items-center justify-center gap-4 navbar-center">
-                    <img src="assets/logo.png" alt="">
+                    <img src="assets/logo.png" alt="logo">
                     <p class="hidden text-lg font-semibold text-black font-lexend lg:block">Donate Bangladesh</p>
                 </div>
                 <div class="flex items-center gap-2 navbar-end">
